# veritasai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_SUCCESS.md  EMBEDDING_APIS_SETUP.md  INSTALACAO_MANUAL.md  LICENSE  PROGRESS_STATUS.md  QDRANT_SETUP.md  README.md  RELATORIO_VER-023.md  SETUP_GUIDE.md  STATUS_REPORT.md  babel.config.js  docker-compose.yml  jest.config.js  jest.config.unit.js  manifest.json  package.json  playwright.config.js  pyproject.toml  test-qdrant.js  webpack.config.js
.docs/: COMPLETE_TASK_LIST.json  DEVELOPMENT_ROADMAP.json  PRD.md  PRE_DEVELOPMENT_CHECKLIST.md  ROADMAP_USAGE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  coverage-report.yml  deploy.yml  notifications.yml  quality-gates.yml  release.yml  test.yml
docker/: docker-compose.test.yml
docker/qdrant/config/: config.yaml
docs/: CI-CD.md  JEST_GLOBAIS.md  TESTE_AUTO_VERIFICACAO.md  VER-018-SUMMARY.md  VER-020-SUMMARY.md  VER-021-SUMMARY.md  VER-022-END-TO-END-FLOW.md  VER-022-SUMMARY.md
examples/: background-usage.md  content-script-usage.md  embedding-service-usage.js  end-to-end-demo.html  hybrid-analyzer-usage.js  hybrid-fact-checking.js  notifications-usage.md  popup-usage.md  tooltip-usage.md
scripts/: check-docker.js  coverage-report.js  format.py  generate-badges.js  lint.py  roadmap_manager.py  run-benchmarks.js  run-performance-tests.js  setup-dev.js  setup-qdrant.js  setup_python.py  simple_status.py  status_report.py  test-auto-verification.js  test-extension-auto-verify.js  test.py  update-coverage-thresholds.js  update_status.py  validate-manifest.js
src/: __init__.py
src/assets/: README.md
src/assets/styles/: content.css  notifications.css  tooltip.css
src/background/: api-integration.js  api-manager.js  background.js  cache-manager.js  message-handler.js
src/background/utils/: rate-limiter.js  retry-logic.js
src/content/: content-main.js  content.js  fact-check-integration.js  ui-components.js
src/content/modules/: communication-manager.js  event-manager.js  style-manager.js  text-detector.js  ui-manager.js
src/domain/: __init__.py
src/domain/entities/: __init__.py  analysis_result.py  classification.py  text.py  user.py
src/domain/value_objects/: __init__.py  api_key.py  confidence_score.py  text_hash.py
src/options/: options.css  options.html  options.js
src/popup/: popup.css  popup.html  popup.js
src/services/: ConfigService.js  embedding-service.js  fact-check-orchestrator.js  google-fact-check-service.js  groq-llm-service.js  hybrid-analyzer.js  integration-service.js  qdrant-client.js  qdrant-service.js
src/utils/: __init__.py  cache-manager.js  cost-tracker.js  error-handler.js  keyword-extractor.js  memory-optimizer.js  performance-monitor.js  rate-limiter.js  response-optimizer.js  response-parser.js  text_processor.py  user-notifications.js
tests/: conftest.py  setup.js
tests/__mocks__/: chrome.js  compromise-dates.js  compromise-numbers.js  compromise.js
tests/e2e/: extension-basic.spec.js  extension-simple.spec.js  global-setup.js  global-teardown.js  popup.test.js  tooltip.test.js
tests/fixtures/: test-page.html
tests/helpers/: cleanup.js
tests/integration/: end-to-end-basic.test.js  end-to-end-flow.test.js  google-api.test.js
tests/manual/: COMANDOS_TESTE.md  DEBUG_SELECAO_TEXTO.md  INSTRUCOES_TESTE.md  test-auto-verification.html
tests/performance/: benchmarks.test.js  extension-performance.test.js  performance.test.js
tests/python/: test_example.py
tests/unit/: background.test.js  content-script.test.js  content.test.js  embedding-service.test.js  google-fact-check-service.test.js  groq-llm-service.test.js  hybrid-analyzer.test.js  keyword-extractor.test.js  notifications.test.js  performance-monitor.test.js  popup-simple.test.js  popup.test.js  qdrant-client.test.js  response-optimizer.test.js
